[metadata]
name = astLib
url = https://astlib.readthedocs.io,
author = Matt Hilton & Steven Boada,
author_email = matt.hilton@mykolab.com,
description = A set of python modules for producing simple plots, statistics, common calculations, coordinate conversions, and manipulating FITS images with World Coordinate System (WCS) information
long_description = file: README.rst
keywords = astrophysics, astronomy
license = LGPL
classifiers =
    Programming Language :: Python :: 3
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
    Natural Language :: English
    Operating System :: POSIX
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries

[options]
packages = find:
install_requires =
    astropy >= 3.2
    numpy >= 1.10
    matplotlib >= 3.0
    scipy >= 1.7
